--- a/emilia-cabrera.html
+++ b/emilia-cabrera.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emilia Cabrera</title>
-    <link rel="icon" href="Favicon.svg" type="image/svg" />
+    <link rel="icon" href="./HTML/Favicon.svg" type="image/svg" />
   </head>
   <body>
     <header>
@@ -38,37 +38,37 @@
         <div class="general-card">
               <div class="card-content">
                 <figure class="img-card">
-                  <img src="/img/imgHTML.svg" alt="Logo HTML 5" />
+                  <img src="./img/imgHTML.svg" alt="Logo HTML 5" />
                 </figure>
                 <h3 class="title-card">HTML 5</h3>
               </div>
               <div class="card-content">
                 <figure class="img-card">
-                  <img src="/img/imgCSS.svg" alt="Logo CSS 3" />
+                  <img src="./img/imgCSS.svg" alt="Logo CSS 3" />
                 </figure>
                 <h3 class="title-card">CSS 3</h3>
               </div>
               <div class="card-content">
                 <figure class="img-card">
-                  <img src="/img/imgSASS.svg" alt="Logo SASS" />
+                  <img src="./img/imgSASS.svg" alt="Logo SASS" />
                 </figure>
                 <h3 class="title-card">SASS</h3>
               </div>
               <div class="card-content">
                 <figure class="img-card">
-                  <img src="/img/imgJavaScript.svg" alt="Logo JAVA SCRIPT" />
+                  <img src="./img/imgJavaScript.svg" alt="Logo JAVA SCRIPT" />
                 </figure>
                 <h3 class="title-card">JAVA SCRIPT</h3>
               </div>
               <div class="card-content">
                 <figure class="img-card">
-                  <img src="/img/imgREACT.svg" alt="Logo REACT" />
+                  <img src="./img/imgREACT.svg" alt="Logo REACT" />
                 </figure>
                 <h3 class="title-card">REACT</h3>
               </div>
               <div class="card-content">
                 <figure class="img-card">
-                  <img src="/img/imgGIT.svg" alt="Logo GIT" />
+                  <img src="./img/imgGIT.svg" alt="Logo GIT" />
                 </figure>
                 <h3 class="title-card">GIT</h3>
               </div>
