Empiezo el CSS, subo carpeta de fuentes, creo carpetas.

--- a/HTML/emilia-cabrera.html
+++ b/HTML/emilia-cabrera.html
@@ -4,27 +4,90 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emilia Cabrera</title>
-    <link rel="icon" href="Favicon.svg" type="image/svg" />
+    <link rel="icon" href="./HTML/Favicon.svg" type="image/svg" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
-    <header>
+    <header class="nav">
       <button class="button-secondary">HOLA</button>
       <button class="button-secondary">CONOCIMIENTOS</button>
       <button class="button-secondary">PROYECTOS</button>
       <button class="button-primary">CONTACTO</button>
     </header>
     <main>
-      <section>
+      <section class="hola">
         <div class="left-text">
-          <h2 class="heading">Hola, soy</h2>
+          <h2 class="heading-0">Hola, soy</h2>
           <h1 class="name">Emilia Cabrera</h1>
-          <p class="text">Diseñadora y desarrolladora</p>
+          <p class="text-0">Diseñadora y desarrolladora</p>
           <button class="button-primary">MIS PROYECTOS</button>
         </div>
         <div class="rigth-img">
-          <figure><img src="" alt="" /></figure>
-          <figcaption>Mujer sentada frente a una computadora</figcaption>
+          <figure>
+            <img
+              src="../img/imgHola.svg"
+              alt="Mujer sentada frente a una computadora"
+            />
+          </figure>
         </div>
+      </section>
+      <section>
+        <div class="center-text">
+          <h2 class="heading">Mis conocimientos</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur. Est tortor nulla
+            pellentesque sagittis volutpat elit orci eget. Id congue dictum
+            scelerisque turpis.
+          </p>
+        </div>
+        <div class="general-card">
+          <div class="card-content">
+            <figure class="img-card">
+              <img src="../img/imgHTML.svg" alt="Logo HTML 5" />
+            </figure>
+            <h3 class="title-card">HTML 5</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img src="../img/imgCSS.svg" alt="Logo CSS 3" />
+            </figure>
+            <h3 class="title-card">CSS 3</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img src="../img/imgSASS.svg" alt="Logo SASS" />
+            </figure>
+            <h3 class="title-card">SASS</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img src="../img/imgJavaScript.svg" alt="Logo JAVA SCRIPT" />
+            </figure>
+            <h3 class="title-card">JAVA SCRIPT</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img src="../img/imgREACT.svg" alt="Logo REACT" />
+            </figure>
+            <h3 class="title-card">REACT</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img src="../img/imgGIT.svg" alt="Logo GIT" />
+            </figure>
+            <h3 class="title-card">GIT</h3>
+          </div>
+        </div>
+      </section>
+      <section class="q">
+        <q>
+          <blockquote class="cite-text">
+            Lorem ipsum dolor sit amet consectetur. Gravida at nec amet euismod.
+            Eget diam enim risus dignissim id a donec eu. Erat erat sit sed
+            tempor. Proin mi vitae mi integer facilisi est cum sapien.
+          </blockquote>
+          <cite class="cite"> Someone </cite>
+        </q>
       </section>
       <section>
         <div class="center-text">
@@ -36,13 +99,50 @@
           </p>
         </div>
         <div class="general-card">
-          <div class="card">
-            <div class="card-content">
-              <div class="img-card">
-                <img src="" alt="" />
-              </div>
-              <h3 class="title-card">HTML</h3>
-            </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img
+                src="../img/imgProyectoCard1.svg"
+                alt="Manos escribiendo un grafico"
+              />
+            </figure>
+            <h3 class="title-card">Proyecto</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img
+                src="../img/imgProyectoCard2.svg"
+                alt="Manos en una computadora"
+              />
+            </figure>
+            <h3 class="title-card">Proyecto</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img
+                src="../img/imgProyectoCard3.svg"
+                alt="Mujer en pose de yoga trabajando en la compu"
+              />
+            </figure>
+            <h3 class="title-card">Proyecto</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img
+                src="../img/imgProyectoCard4.svg"
+                alt="Madre trabajando en una mesa con su hija"
+              />
+            </figure>
+            <h3 class="title-card">Proyecto</h3>
+          </div>
+          <div class="card-content">
+            <figure class="img-card">
+              <img
+                src="../img/imgProyectoCard5.svg"
+                alt="Mujer sentada trabajando en la compu"
+              />
+            </figure>
+            <h3 class="title-card">Proyecto</h3>
           </div>
         </div>
       </section>
