Cambio nombre de las carpetas y html. Paso favaico a ico. Estilo cite.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emilia Cabrera</title>
-    <link rel="icon" href="./HTML/Favicon.svg" type="image/svg" />
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="icon" href="Favicon.ico" type="image/svg" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="nav">
@@ -25,7 +25,7 @@
         <div class="rigth-img">
           <figure>
             <img
-              src="../img/imgHola.svg"
+              src="img/imgHola.svg"
               alt="Mujer sentada frente a una computadora"
             />
           </figure>
@@ -43,51 +43,50 @@
         <div class="general-card">
           <div class="card-content">
             <figure class="img-card">
-              <img src="../img/imgHTML.svg" alt="Logo HTML 5" />
+              <img src="img/imgHTML.svg" alt="Logo HTML 5" />
             </figure>
             <h3 class="title-card">HTML 5</h3>
           </div>
           <div class="card-content">
             <figure class="img-card">
-              <img src="../img/imgCSS.svg" alt="Logo CSS 3" />
+              <img src="img/imgCSS.svg" alt="Logo CSS 3" />
             </figure>
             <h3 class="title-card">CSS 3</h3>
           </div>
           <div class="card-content">
             <figure class="img-card">
-              <img src="../img/imgSASS.svg" alt="Logo SASS" />
+              <img src="img/imgSASS.svg" alt="Logo SASS" />
             </figure>
             <h3 class="title-card">SASS</h3>
           </div>
           <div class="card-content">
             <figure class="img-card">
-              <img src="../img/imgJavaScript.svg" alt="Logo JAVA SCRIPT" />
+              <img src="img/imgJavaScript.svg" alt="Logo JAVA SCRIPT" />
             </figure>
             <h3 class="title-card">JAVA SCRIPT</h3>
           </div>
           <div class="card-content">
             <figure class="img-card">
-              <img src="../img/imgREACT.svg" alt="Logo REACT" />
+              <img src="img/imgREACT.svg" alt="Logo REACT" />
             </figure>
             <h3 class="title-card">REACT</h3>
           </div>
           <div class="card-content">
             <figure class="img-card">
-              <img src="../img/imgGIT.svg" alt="Logo GIT" />
+              <img src="img/imgGIT.svg" alt="Logo GIT" />
             </figure>
             <h3 class="title-card">GIT</h3>
           </div>
         </div>
       </section>
       <section class="q">
-        <q>
-          <blockquote class="cite-text">
-            Lorem ipsum dolor sit amet consectetur. Gravida at nec amet euismod.
-            Eget diam enim risus dignissim id a donec eu. Erat erat sit sed
-            tempor. Proin mi vitae mi integer facilisi est cum sapien.
-          </blockquote>
-          <cite class="cite"> Someone </cite>
-        </q>
+        <p class="cite">"</p>
+        <blockquote class="cite-text">
+          Lorem ipsum dolor sit amet consectetur. Gravida at nec amet euismod.
+          Eget diam enim risus dignissim id a donec eu. Erat erat sit sed
+          tempor. Proin mi vitae mi integer facilisi est cum sapien.
+        </blockquote>
+        <p class="cite">Someone</p>
       </section>
       <section>
         <div class="center-text">
@@ -102,7 +101,7 @@
           <div class="card-content">
             <figure class="img-card">
               <img
-                src="../img/imgProyectoCard1.svg"
+                src="img/imgProyectoCard1.svg"
                 alt="Manos escribiendo un grafico"
               />
             </figure>
@@ -111,7 +110,7 @@
           <div class="card-content">
             <figure class="img-card">
               <img
-                src="../img/imgProyectoCard2.svg"
+                src="img/imgProyectoCard2.svg"
                 alt="Manos en una computadora"
               />
             </figure>
@@ -120,7 +119,7 @@
           <div class="card-content">
             <figure class="img-card">
               <img
-                src="../img/imgProyectoCard3.svg"
+                src="img/imgProyectoCard3.svg"
                 alt="Mujer en pose de yoga trabajando en la compu"
               />
             </figure>
@@ -129,7 +128,7 @@
           <div class="card-content">
             <figure class="img-card">
               <img
-                src="../img/imgProyectoCard4.svg"
+                src="img/imgProyectoCard4.svg"
                 alt="Madre trabajando en una mesa con su hija"
               />
             </figure>
@@ -138,7 +137,7 @@
           <div class="card-content">
             <figure class="img-card">
               <img
-                src="../img/imgProyectoCard5.svg"
+                src="img/imgProyectoCard5.svg"
                 alt="Mujer sentada trabajando en la compu"
               />
             </figure>
