Centro img card en responsive

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           <button class="button-primary">MIS PROYECTOS</button>
         </div>
         <div class="rigth-img">
-          <figure>
+          <div>
             <img
               src="img/imgHola.svg"
               alt="Mujer sentada frente a una computadora"
             />
-          </figure>
+          </div>
         </div>
       </section>
       <section>
@@ -42,45 +42,45 @@
         </div>
         <div class="general-card">
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img src="img/imgHTML.svg" alt="Logo HTML 5" />
-            </figure>
+            </div>
             <h3 class="title-card">HTML 5</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img src="img/imgCSS.svg" alt="Logo CSS 3" />
-            </figure>
+            </div>
             <h3 class="title-card">CSS 3</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img src="img/imgSASS.svg" alt="Logo SASS" />
-            </figure>
+            </div>
             <h3 class="title-card">SASS</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img src="img/imgJavaScript.svg" alt="Logo JAVA SCRIPT" />
-            </figure>
+            </div>
             <h3 class="title-card">JAVA SCRIPT</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img src="img/imgREACT.svg" alt="Logo REACT" />
-            </figure>
+            </div>
             <h3 class="title-card">REACT</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img src="img/imgGIT.svg" alt="Logo GIT" />
-            </figure>
+            </div>
             <h3 class="title-card">GIT</h3>
           </div>
         </div>
       </section>
       <section class="q">
-        <p class="cite">"</p>
+        <img class="comillas" src="./img/comillas.svg" alt="Comillas" />
         <blockquote class="cite-text">
           Lorem ipsum dolor sit amet consectetur. Gravida at nec amet euismod.
           Eget diam enim risus dignissim id a donec eu. Erat erat sit sed
@@ -99,48 +99,48 @@
         </div>
         <div class="general-card">
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img
                 src="img/imgProyectoCard1.svg"
                 alt="Manos escribiendo un grafico"
               />
-            </figure>
+            </div>
             <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img
                 src="img/imgProyectoCard2.svg"
                 alt="Manos en una computadora"
               />
-            </figure>
+            </div>
             <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img
                 src="img/imgProyectoCard3.svg"
                 alt="Mujer en pose de yoga trabajando en la compu"
               />
-            </figure>
+            </div>
             <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img
                 src="img/imgProyectoCard4.svg"
                 alt="Madre trabajando en una mesa con su hija"
               />
-            </figure>
+            </div>
             <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <figure class="img-card">
+            <div class="img-card">
               <img
                 src="img/imgProyectoCard5.svg"
                 alt="Mujer sentada trabajando en la compu"
               />
-            </figure>
+            </div>
             <h3 class="title-card">Proyecto</h3>
           </div>
         </div>
