Agrego footer, algunas correcciones en el formulario

--- a/index.html
+++ b/index.html
@@ -217,5 +217,24 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="div-button-secondary-footer">
+        <button class="button-secondary">HOLA</button>
+        <button class="button-secondary">CONOCIMIENTOS</button>
+        <button class="button-secondary">PROYECTOS</button>
+        <button class="button-secondary">CONTACTO</button>
+      </div>
+      <div class="div-ico-footer">
+        <i class="ico-footer"
+          ><img src="./img/linkedin-footer.svg" alt="Logo Linkedin"
+        /></i>
+        <i class="ico-footer"
+          ><img src="./img/gmail-footer.svg" alt="Logo Gmail"
+        /></i>
+        <i class="ico-footer"
+          ><img src="./img/behance-footer.svg" alt="Logo Behance"
+        /></i>
+      </div>
+    </footer>
   </body>
 </html>
