Arreglo medidas card en responsive

--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
           </button>
         </div>
         <div class="rigth-img">
-          <div>
-            <img
-              src="img/imgHola.svg"
-              alt="Mujer sentada frente a una computadora"
-            />
-          </div>
+          <img
+            src="img/imgHola.svg"
+            alt="Mujer sentada frente a una computadora"
+          />
         </div>
       </section>
       <section>
@@ -154,7 +152,7 @@
       <section class="seccion-contactame">
         <div class="contactame" id="contacto">
           <h2>Contactame</h2>
-          <p>
+          <p class="texto-contactame">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
             sequi vitae eveniet quas repellendus, ut magnam eius sapiente
             ducimus natus veniam aut ratione eum odit in magni qui. Laudantium,
