Corregui espacios en el formulario

--- a/index.html
+++ b/index.html
@@ -182,26 +182,28 @@
         <div class="formulario">
           <h2>Escribime</h2>
           <form action="" method="post">
-            <label for="Nombre" class="input50">
-              Nombre
-              <input
-                type="text"
-                name="Nombre"
-                id="Nombre"
-                placeholder="Ej: Jimena"
-                required
-              />
-            </label>
-            <label for="Apellido" class="input50">
-              Apellido
-              <input
-                type="text"
-                name="Apellido"
-                id="Apellido"
-                placeholder="Ej: Rodriguez"
-                required
-              />
-            </label>
+            <div class="field">
+              <label for="Nombre" class="input50">
+                Nombre
+                <input
+                  type="text"
+                  name="Nombre"
+                  id="Nombre"
+                  placeholder="Ej: Jimena"
+                  required
+                />
+              </label>
+              <label for="Apellido" class="input50">
+                Apellido
+                <input
+                  type="text"
+                  name="Apellido"
+                  id="Apellido"
+                  placeholder="Ej: Rodriguez"
+                  required
+                />
+              </label>
+            </div>
             <label for="E-mail" class="input100">
               E-mail
               <input
