Agregue hover y focus

--- a/index.html
+++ b/index.html
@@ -103,49 +103,59 @@
         </div>
         <div class="general-card">
           <div class="card-content">
-            <div class="img-card">
-              <img
-                src="img/imgProyectoCard1.svg"
-                alt="Manos escribiendo un grafico"
-              />
-            </div>
-            <h3 class="title-card">Proyecto</h3>
+            <a href="#">
+              <div class="img-card">
+                <img
+                  src="img/imgProyectoCard1.svg"
+                  alt="Manos escribiendo un grafico"
+                />
+              </div>
+              <h3 class="title-card">Proyecto</h3>
+            </a>
           </div>
           <div class="card-content">
-            <div class="img-card">
-              <img
-                src="img/imgProyectoCard2.svg"
-                alt="Manos en una computadora"
-              />
-            </div>
-            <h3 class="title-card">Proyecto</h3>
+            <a href="#">
+              <div class="img-card">
+                <img
+                  src="img/imgProyectoCard2.svg"
+                  alt="Manos en una computadora"
+                />
+              </div>
+              <h3 class="title-card">Proyecto</h3>
+            </a>
           </div>
           <div class="card-content">
-            <div class="img-card">
-              <img
-                src="img/imgProyectoCard3.svg"
-                alt="Mujer en pose de yoga trabajando en la compu"
-              />
-            </div>
-            <h3 class="title-card">Proyecto</h3>
+            <a href="#">
+              <div class="img-card">
+                <img
+                  src="img/imgProyectoCard3.svg"
+                  alt="Mujer en pose de yoga trabajando en la compu"
+                />
+              </div>
+              <h3 class="title-card">Proyecto</h3>
+            </a>
           </div>
           <div class="card-content">
-            <div class="img-card">
-              <img
-                src="img/imgProyectoCard4.svg"
-                alt="Madre trabajando en una mesa con su hija"
-              />
-            </div>
-            <h3 class="title-card">Proyecto</h3>
+            <a href="#">
+              <div class="img-card">
+                <img
+                  src="img/imgProyectoCard4.svg"
+                  alt="Madre trabajando en una mesa con su hija"
+                />
+              </div>
+              <h3 class="title-card">Proyecto</h3>
+            </a>
           </div>
           <div class="card-content">
-            <div class="img-card">
-              <img
-                src="img/imgProyectoCard5.svg"
-                alt="Mujer sentada trabajando en la compu"
-              />
-            </div>
-            <h3 class="title-card">Proyecto</h3>
+            <a href="#">
+              <div class="img-card">
+                <img
+                  src="img/imgProyectoCard5.svg"
+                  alt="Mujer sentada trabajando en la compu"
+                />
+              </div>
+              <h3 class="title-card">Proyecto</h3>
+            </a>
           </div>
         </div>
       </section>
@@ -216,7 +226,13 @@
             </label>
             <label for="Mensaje" class="input100">
               Mensaje
-              <textarea name="Mensaje" id="Mensaje" required> </textarea>
+              <textarea
+                name="Mensaje"
+                id="Mensaje"
+                placeholder="Escribi aqui tu mensaje"
+                required
+              >
+              </textarea>
             </label>
             <button class="button-formulario">Enviar</button>
           </form>
