--- a/index.html
+++ b/index.html
@@ -172,17 +172,23 @@
             <a
               class="redes-contactame"
               href="https://www.linkedin.com/in/maria-emilia-cabrera-582740115/"
+              target="_blank"
             >
               <i><img src="./img/linkedin.svg" alt="Logo Linkedin" /></i>
               <h4>Linkedin</h4>
             </a>
-            <a class="redes-contactame" href="emi.22692@gmail.com">
+            <a
+              class="redes-contactame"
+              href="emi.22692@gmail.com"
+              target="_blank"
+            >
               <i><img src="./img/gmail.svg" alt="Logo Gmail" /></i>
               <h4>Gmail</h4>
             </a>
             <a
               class="redes-contactame"
               href="https://www.behance.net/emiliacabrera"
+              target="_blank"
             >
               <i><img src="./img/behance.svg" alt="Logo Behance" /></i>
               <h4>Behance</h4>
@@ -256,12 +262,16 @@
         <a
           class="ico-footer"
           href="https://www.linkedin.com/in/maria-emilia-cabrera-582740115/"
+          target="_blank"
           ><img src="./img/linkedin-footer.svg" alt="Logo Linkedin"
         /></a>
-        <a class="ico-footer" href="emi.22692@gmail.com"
+        <a class="ico-footer" href="emi.22692@gmail.com" target="_blank"
           ><img src="./img/gmail-footer.svg" alt="Logo Gmail"
         /></a>
-        <a class="ico-footer" href="https://www.behance.net/emiliacabrera"
+        <a
+          class="ico-footer"
+          href="https://www.behance.net/emiliacabrera"
+          target="_blank"
           ><img src="./img/behance-footer.svg" alt="Logo Behance"
         /></a>
       </div>
